exports[`no-unawaited-subtest > invalid(1): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(1): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t.test("child", () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { await t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(10): import test from 'node:test';\ntest(\"parent\", async t => { t?.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { t?.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(10): import test from 'node:test';\ntest(\"parent\", async t => { t?.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t?.test("child", () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { await t?.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(11): import test from 'node:test';\ntest(\"parent\", async t => { void t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { void t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(11): import test from 'node:test';\ntest(\"parent\", async t => { void t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { void t.test("child", () => {}); });
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(12): import test from 'node:test';\ntest(\"parent\", t => { void t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { void t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(12): import test from 'node:test';\ntest(\"parent\", t => { void t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { void t.test("child", () => {}); });
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(13): import test from 'node:test';\ntest(\"parent\", async t => { void (t.test(\"child\", () => {}) as any); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { void (t.test("child", () => {}) as any); });

`;

exports[`no-unawaited-subtest > invalid(13): import test from 'node:test';\ntest(\"parent\", async t => { void (t.test(\"child\", () => {}) as any); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { void (t.test("child", () => {}) as any); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(14): import test from 'node:test';\ntest(\"parent\", async t => { xs.forEach(x => { t.test(x, () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { xs.forEach(x => { t.test(x, () => {}); }); });

`;

exports[`no-unawaited-subtest > invalid(14): import test from 'node:test';\ntest(\"parent\", async t => { xs.forEach(x => { t.test(x, () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { xs.forEach(x => { t.test(x, () => {}); }); });
    |                                               ^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(15): import test from 'node:test';\ntest(\"parent\", t => { setTimeout(() => { function create() { t.test(\"child\", () => {}); } create(); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { setTimeout(() => { function create() { t.test("child", () => {}); } create(); }); });

`;

exports[`no-unawaited-subtest > invalid(15): import test from 'node:test';\ntest(\"parent\", t => { setTimeout(() => { function create() { t.test(\"child\", () => {}); } create(); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { setTimeout(() => { function create() { t.test("child", () => {}); } create(); }); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(16): import test from 'node:test';\ntest(\"parent\", t => { function schedule() { setTimeout(() => { t.test(\"child\", () => {}); }); } schedule(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { function schedule() { setTimeout(() => { t.test("child", () => {}); }); } schedule(); });

`;

exports[`no-unawaited-subtest > invalid(16): import test from 'node:test';\ntest(\"parent\", t => { function schedule() { setTimeout(() => { t.test(\"child\", () => {}); }); } schedule(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { function schedule() { setTimeout(() => { t.test("child", () => {}); }); } schedule(); });
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(17): import test from 'node:test';\ntest(\"parent\", t => { load().then(() => { setTimeout(() => { t.test(\"child\", () => {}); }); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { load().then(() => { setTimeout(() => { t.test("child", () => {}); }); }); });

`;

exports[`no-unawaited-subtest > invalid(17): import test from 'node:test';\ntest(\"parent\", t => { load().then(() => { setTimeout(() => { t.test(\"child\", () => {}); }); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { load().then(() => { setTimeout(() => { t.test("child", () => {}); }); }); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(18): import test from 'node:test';\ntest(\"parent\", async t => { await new Promise(resolve => { setTimeout(() => { t.test(\"child\", () => {}); resolve(); }); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { await new Promise(resolve => { setTimeout(() => { t.test("child", () => {}); resolve(); }); }); });

`;

exports[`no-unawaited-subtest > invalid(18): import test from 'node:test';\ntest(\"parent\", async t => { await new Promise(resolve => { setTimeout(() => { t.test(\"child\", () => {}); resolve(); }); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { await new Promise(resolve => { setTimeout(() => { t.test("child", () => {}); resolve(); }); }); });
    |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(19): import test from 'node:test';\ntest(\"parent\", (t, done) => { setTimeout(() => { t.test(\"child\", () => {}); done(); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", (t, done) => { setTimeout(() => { t.test("child", () => {}); done(); }); });

`;

exports[`no-unawaited-subtest > invalid(19): import test from 'node:test';\ntest(\"parent\", (t, done) => { setTimeout(() => { t.test(\"child\", () => {}); done(); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", (t, done) => { setTimeout(() => { t.test("child", () => {}); done(); }); });
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(2): import test from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(2): import test from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { t.test("child", () => {}); });
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(20): import test from 'node:test';\ntest(\"parent\", (t, done) => { load().then(() => { t.test(\"child\", () => {}); done(); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", (t, done) => { load().then(() => { t.test("child", () => {}); done(); }); });

`;

exports[`no-unawaited-subtest > invalid(20): import test from 'node:test';\ntest(\"parent\", (t, done) => { load().then(() => { t.test(\"child\", () => {}); done(); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", (t, done) => { load().then(() => { t.test("child", () => {}); done(); }); });
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(21): import test from 'node:test';\ntest(\"parent\", t => { t.plan(1, {wait: true}); setTimeout(() => { t.test(\"child\", () => {}); t.assert.ok(true); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { t.plan(1, {wait: true}); setTimeout(() => { t.test("child", () => {}); t.assert.ok(true); }); });

`;

exports[`no-unawaited-subtest > invalid(21): import test from 'node:test';\ntest(\"parent\", t => { t.plan(1, {wait: true}); setTimeout(() => { t.test(\"child\", () => {}); t.assert.ok(true); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { t.plan(1, {wait: true}); setTimeout(() => { t.test("child", () => {}); t.assert.ok(true); }); });
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;

exports[`no-unawaited-subtest > invalid(3): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"a\", () => {}); t.test(\"b\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { t.test("a", () => {}); t.test("b", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(3): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"a\", () => {}); t.test(\"b\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t.test("a", () => {}); t.test("b", () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { await t.test("a", () => {}); t.test("b", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(3): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"a\", () => {}); t.test(\"b\", () => {}); }); 3`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t.test("a", () => {}); t.test("b", () => {}); });
    |                                                    ^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { t.test("a", () => {}); await t.test("b", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(4): import test from 'node:test';\ntest(\"parent\", async context => { context.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async context => { context.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(4): import test from 'node:test';\ntest(\"parent\", async context => { context.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async context => { context.test("child", () => {}); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`context.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async context => { await context.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(5): import test from 'node:test';\ntest(\"parent\", async t => { t.test.skip(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { t.test.skip("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(5): import test from 'node:test';\ntest(\"parent\", async t => { t.test.skip(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t.test.skip("child", () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { await t.test.skip("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(6): import test from 'node:test';\ntest(\"parent\", async t => { await t.test(\"child\", async t2 => { t2.test(\"grandchild\", () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { await t.test("child", async t2 => { t2.test("grandchild", () => {}); }); });

`;

exports[`no-unawaited-subtest > invalid(6): import test from 'node:test';\ntest(\"parent\", async t => { await t.test(\"child\", async t2 => { t2.test(\"grandchild\", () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { await t.test("child", async t2 => { t2.test("grandchild", () => {}); }); });
    |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t2.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async t => { await t.test("child", async t2 => { await t2.test("grandchild", () => {}); }); });

`;

exports[`no-unawaited-subtest > invalid(7): import test from 'node:test';\nimport {it} from 'node:test';\nit(\"parent\", async t => { t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | import {it} from 'node:test';
  3 | it("parent", async t => { t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(7): import test from 'node:test';\nimport {it} from 'node:test';\nit(\"parent\", async t => { t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {it} from 'node:test';
> 3 | it("parent", async t => { t.test("child", () => {}); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | import {it} from 'node:test';
  3 | it("parent", async t => { await t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(8): import test from 'node:test';\ntest(\"parent\", async (t: any) => { t.test(\"child\", () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async (t: any) => { t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(8): import test from 'node:test';\ntest(\"parent\", async (t: any) => { t.test(\"child\", () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async (t: any) => { t.test("child", () => {}); });
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

Output:
  1 | import test from 'node:test';
  2 | test("parent", async (t: any) => { await t.test("child", () => {}); });

`;

exports[`no-unawaited-subtest > invalid(9): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"child\", () => {}) as Promise<void>; }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", async t => { t.test("child", () => {}) as Promise<void>; });

`;

exports[`no-unawaited-subtest > invalid(9): import test from 'node:test';\ntest(\"parent\", async t => { t.test(\"child\", () => {}) as Promise<void>; }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", async t => { t.test("child", () => {}) as Promise<void>; });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^ Subtest \`t.test()\` must be awaited or returned, otherwise it is cancelled when the parent test finishes.

`;
